Fixes a spacing issue

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -1868,3 +1868,10 @@ hr {
   margin-top: 5px;
   margin-bottom: 5px
 }
+
+.spell-stat-table h4 {
+  font-size: 18px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: inline-block;
+}
